--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hey,<br>Je suis <span class="home__title-color">Kouadio </span><br>Développeur web</h1>
 
-                    <a href="#" class="button">Contact</a>
+                    <a href="#contact" class="button">Contact</a>
                 </div>
 
                 <div class="home__social">
@@ -258,3 +258,4 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
