--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                             <li>CSS3</li>
                             <li>JAVASCRIPT</li>
                         </ul>
-                        <a href="vente-auto.onrender.com" class="project__link">Voir le projet</a>
+                        <a href="https://vente-auto.onrender.com" class="project__link">Voir le projet</a>
                     </div>
                     <!-- Projet 2 -->
                     <div class="project__card">
@@ -289,3 +289,4 @@
 
 </body>
 </html>
+
