--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
         <link rel="stylesheet" href="assets/css/styles.css">
         <link rel="icon" type="image/png" href="favicon.png">
         <!-- =====BOX ICONS===== -->
@@ -78,7 +78,7 @@
 
                                                Curieux et créatif, j’aime transformer une idée en un produit concret : du design à la mise en ligne.
 
-                                               Grâce à mes compétences en HTML, CSS, JavaScript, PHP, MySQL et React Native, je conçois des solutions digitales adaptées aussi bien aux entreprises qu’aux particuliers.
+                                               Grâce à mes compétences en HTML, CSS, JavaScript, PHP, Laravel, MySQL et React Native, je conçois des solutions digitales adaptées aussi bien aux entreprises qu’aux particuliers.
 
                                               <br>💡 Mon objectif : aider mes clients à valoriser leur présence en ligne avec des interfaces intuitives, esthétiques et efficaces.
 
@@ -144,6 +144,18 @@
                             </div>
                             <div>
                               <span class="skills__percentage">60%</span>
+                            </div>
+                        </div>
+                        <div class="skills__data">
+                            <div class="skills__names">
+                                <i class='bx bxl-laravel skills__icon'></i>
+                                <span class="skills__name">Laravel</span>
+                            </div>
+                            <div class="skills__bar skills__laravel">
+                                
+                            </div>
+                            <div>
+                                <span class="skills__percentage">65%</span>
                             </div>
                         </div>
                         <div class="skills__data">
@@ -289,4 +301,3 @@
 
 </body>
 </html>
-
